--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "git+https://github.com/2425sja/wetube.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js"
+    "dev": "nodemon --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "author": "SJ",
   "license": "ISC",
@@ -31,6 +32,13 @@
     "@babel/core": "^7.21.4",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.21.4",
-    "nodemon": "^2.0.22"
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1"
   }
 }
