--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "git+https://github.com/2425sja/wetube.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js",
-    "assets": "webpack --config webpack.config.js"
+    "dev:server": "nodemon",
+    "dev:assets": "webpack"
   },
   "author": "SJ",
   "license": "ISC",
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.21.4",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.22",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
